Role Integration and optional security features